Closed
Bug 619089
Opened 15 years ago
Closed 15 years ago
onKeyDown event, do not add the character!
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
VERIFIED
FIXED
| Tracking | Status | |
|---|---|---|
| blocking2.0 | --- | final+ |
People
(Reporter: cs.luizeduardo, Assigned: enndeakin)
References
Details
(Keywords: regression, testcase, Whiteboard: [softblocker][fx4-fixed-bugday])
Attachments
(2 files, 1 obsolete file)
|
51 bytes,
text/html
|
Details | |
|
3.71 KB,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b7) Gecko/20100101 Firefox/4.0b7
Build Identifier: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b7) Gecko/20100101 Firefox/4.0b7
When i use onKeyDown event on firefox 4, the letter typed to not get displayed.
Like this:
<input type="TEXT" onkeydown="alert(this.value)" />
If i click the A letter on blank input field, it will display a blank alert (correct), but do not add the A letter clicked.
I'm usning firefox 4 beta 7!
Reproducible: Always
Steps to Reproduce:
1.create a html file
2.create a input field with keydown event with anything like an alert;
3.click any letter, or number
Actual Results:
Do not work properly the typed letter
Expected Results:
Display the typed word before
Comment 1•15 years ago
|
||
Seeing this with Mozilla/5.0 (Windows NT 5.1; rv:2.0b8pre) Gecko/20101214 Firefox/4.0b8pre ID:20101214030322 too.
Works in Firefox 3.6.x.
Component: General → Event Handling
Keywords: regression,
testcase
Product: Firefox → Core
QA Contact: general → events
Version: unspecified → Trunk
Comment 2•15 years ago
|
||
Comment 3•15 years ago
|
||
Presumably the issue is that we lose focus or something and then the keyup goes to a different place and there is no keypress on the text control?
Neil, what do other UAs do?
Status: UNCONFIRMED → NEW
blocking2.0: --- → ?
Ever confirmed: true
| Assignee | ||
Comment 4•15 years ago
|
||
Works fine for me on Mac; the character just doesn't appear until after the alert is dismissed, which is the expected behaviour. Safari behaves the same.
Doesn't work on Windows though. Not sure why the difference.
Comment 5•15 years ago
|
||
The attached testcase doesn't work for me on mac. If I dismiss the alert with the mouse, typeaheadfind opens with the char I typed. If I dismiss it with the keyboard, the original char is just lost....
Comment 6•15 years ago
|
||
Neil, can you have a look here?
Assignee: nobody → enndeakin
blocking2.0: ? → final+
Whiteboard: [softblocker]
| Assignee | ||
Comment 7•15 years ago
|
||
This is because the focus is changing between content and chrome during a keypress. We fixed the cases where focus changed from chrome to content during a keypress in bug 551434, but not other cases as Olli believed it was too regression risky.
| Assignee | ||
Comment 8•15 years ago
|
||
This would fix it but haven't tested it much.
| Assignee | ||
Comment 9•15 years ago
|
||
Comment on attachment 506432 [details] [diff] [review]
patch
Olli, any thoughts on what issues this might cause?
Attachment #506432 -
Flags: review?(Olli.Pettay)
Updated•15 years ago
|
Attachment #506432 -
Flags: review?(Olli.Pettay) → review+
| Assignee | ||
Comment 10•15 years ago
|
||
Attachment #506432 -
Attachment is obsolete: true
| Assignee | ||
Comment 11•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Comment 12•15 years ago
|
||
Verified fixed in Mozilla/5.0 (Windows NT 6.1; WOW64; rv:2.0b12pre) Gecko/20110204 Firefox/4.0b12pre
Status: RESOLVED → VERIFIED
Whiteboard: [softblocker] → [softblocker][fx4-fixed-bugday]
Updated•7 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•