Bug 619089, retarget key events if the focus changes during a keydown event from content to chrome, r=olli,a=blocking